# vanguard-ab-test

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/clean/: Planilha 2.xlsx  demographics_dataset.csv  kp1_visits.csv  kpi_completion_visits.csv  kpi_duration_dataset.csv  kpi_steps_overall.xlsx
notebooks/: KPI-duration_demogfx_rachel.py  KPI-duration_rachel.ipynb  KPI-duration_rachel_updated.ipynb  KPI_completion.ipynb  data_cleaning_beatriz.ipynb  data_cleaning_beatriz.ipynb.backup  data_cleaning_rachel.ipynb  data_loader_rachel.py  demographics_rachel.ipynb  first-start-time_last-confim-time.ipynb  functions.py  functions_beatriz.py  main_dataset_tasks_anne.ipynb
notebooks/.ipynb_checkpoints/: data_cleaning_beatriz-checkpoint.ipynb  main_dataset_tasks-checkpoint.ipynb
